# mdr

./: Cargo.toml  README.md
assets/: kdl.highlight.js
src/: main.rs
src/backend/: egui.rs  webview.rs
src/core/: config.rs  markdown.rs  mermaid.rs  mod.rs
tests/: config.rs
