[package]
name = "mdr"
version = "0.2.8"
edition = "2021"
description = "A lightweight Markdown viewer with live reload and multiple rendering backends"
license = "MIT"
repository = "https://github.com/CleverCloud/mdr"
homepage = "https://github.com/CleverCloud/mdr"
readme = "README.md"
authors = ["Clever Cloud <opensource@clever-cloud.com>"]
categories = ["command-line-utilities", "text-processing"]
keywords = ["markdown", "viewer", "mermaid", "tui", "webview"]

[features]
default = ["egui-backend", "webview-backend", "tui-backend"]
egui-backend = ["dep:eframe", "dep:egui_commonmark", "dep:resvg", "dep:usvg", "dep:tiny-skia"]
webview-backend = ["dep:wry", "dep:tao", "dep:muda", "dep:resvg", "dep:usvg", "dep:tiny-skia"]
tui-backend = ["dep:ratatui", "dep:crossterm", "dep:ratatui-image", "dep:ureq", "dep:resvg", "dep:usvg", "dep:tiny-skia", "image/jpeg", "image/gif", "image/webp"]

[dependencies]
# Core
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.50", default-features = false, features = ["syntect"] }
notify = "8"
notify-debouncer-mini = "0.7"
mermaid-rs-renderer = { version = "0.1.2", default-features = false }
regex = "1"
serde_json = "1"
base64 = "0.22"
kdl = "6"

# egui backend
eframe = { version = "0.33", optional = true }
egui_commonmark = { version = "0.22", features = ["better_syntax_highlighting", "load-images", "svg", "embedded_image"], optional = true }
resvg = { version = "0.45", optional = true }
usvg = { version = "0.45", optional = true }
tiny-skia = { version = "0.11", optional = true }

# webview backend
wry = { version = "0.54", optional = true }
tao = { version = "0.34", optional = true }
muda = { version = "0.15", optional = true }

# tui backend
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
ratatui-image = { version = "4.1", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
ureq = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[package.metadata.deb]
section = "text"
assets = [
    ["target/release/mdr", "/usr/bin/mdr", "755"],
]
extended-description = "A lightweight Markdown viewer with Mermaid diagram support, live reload, and multiple rendering backends (egui, webview, TUI)."

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mdr", dest = "/usr/bin/mdr", mode = "0755" },
]
